# sensor_fusion_in_the_cloud

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  RUN.sh  data.dvc
.dvc/: config
MATLAB/: .gitignore  camera_pc.mat  camera_pts.mat  data_import.m  data_import.mlx  lidar_pc.mat  lidar_pts.mat
MATLAB/preliminaryDesign/: camera_pts.mat  lidar_pts.mat  main.m  main.mlx
Python/: .gitignore  20221210.ipynb  Pipfile  complete.py  lidar_PG.py  main.py  papoulish_gerchberg.ipynb  papoulish_gerchberg_2D_RGB.ipynb  papoulish_gerchberg_2D_greyscale.ipynb  papoulish_gerchberg_3D_pts.ipynb  requirements.txt
Python/PG/: Pipfile  setup.py
Python/Papoulish-Gerchberg/: 20221210.ipynb  papoulish_gerchberg.ipynb
Python/Papoulish-Gerchberg-3D/: 20221210.ipynb  Pipfile  papoulish_gerchberg.ipynb  papoulish_gerchberg_2D_RGB.ipynb  requirements.txt
Python/data_standardization/: 20221210.ipynb  Pipfile  spherical.ipynb
Python/notebooks/: 20221210.ipynb  driving_stereo_v0.ipynb  driving_stereo_v1.ipynb  driving_stereo_v2.ipynb  kitti_v0.ipynb  lpf_remastered.ipynb  papoulish_gerchberg.ipynb  (+15 more)
ROS/: README.md  transformer.sh
RTK/: .gitignore  README.md  RTK_ROS.py  RTK_client.py  RTK_parser.py
data/: .gitignore  20221210.dvc  20230320.dvc  ZED.dvc  image.dvc  lidar.dvc
docker/: .env  README.md  docker-compose.yml
docker/zed/catkin_ws/src/zed-wrapper/: CMakeLists.txt  package.xml
docker/zed/catkin_ws/src/zed-wrapper/scripts/: zed_depth_publisher.py
jetson/: .env  docker-compose.yml
logs/: gst_errors.txt
paper/: main.tex
reports/: LOGBOOK.md
(+90 files in other folders)
